# discord-hotel-bot

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  Secrets.dev.toml.template  rustfmt.toml
.github/workflows/: deploy.yml
src/: commands.rs  helpers.rs  main.rs  moderation_commands.rs  room_commands.rs  types.rs  uptime.rs
src/commands/: moderation.rs  room.rs
