[package]
name = "hotel-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
shuttle-runtime = "0.18.0"
anyhow = "1.0.71"
poise = "0.5.5"
shuttle-poise = "0.18.0"
shuttle-secrets = "0.18.0"
tokio = "1.28.2"
tracing = "0.1.37"
