[package]
name = "discord-hotel-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.18.0"
shuttle-poise = "0.18.0"
shuttle-secrets = "0.18.0"
poise = "0.5.5"
anyhow = "1.0.71"
tokio = "1.28.2"
tracing = "0.1.37"
